2009-09-02  Andy Buckley  <andy@insectnation.org>

	* Moving analysis sources back into single directory, after a
	proletarian uprising ;)

2009-09-01  Andy Buckley  <andy@insectnation.org>

	* Adding WFinder and WAnalysis, based on Z proj and analysis, with
	some tidying of the Z code.

	* ClusteredPhotons now uses an IdentifiedFS to pick the photons to
	be looped over, and only clusters photons around *charged* signal
	particles.

2009-08-31  Andy Buckley  <andy@insectnation.org>

	* Splitting analyses by directory, to make it easier to disable
	building of particular analysis group plugin libs.

	* Removing/merging headers for all analyses except for the special
	MC_JetAnalysis base class.

	* Exit with an error message if addProjection is used twice from
	the same parent with distinct projections.

2009-08-28  Andy Buckley  <andy@insectnation.org>

	* Changed naming convention for analysis plugin libraries, since
	the loader has changed so much: they must now *start* with the
	word "Rivet" (i.e. no lib prefix).

	* Split standard plugin analyses into several plugin libraries:
	these will eventually move into separate subdirs for extra build
	convenience.

	* Started merging analysis headers into the source files, now that
	we can (the plugin hooks previously forbade this).

	* Replacement of analysis loader system with a new one based on
	ideas from ThePEG, which uses dlopen-time instantiation of
	templated global variables to reduce boilerplate plugin hooks to
	one line in analyses.

2009-07-14  Frank Siegert  <frank.siegert@durham.ac.uk>

	* Replacing in-source histo-booking metadata with .plot files.

2009-07-14  Andy Buckley  <andy@insectnation.org>

	* Making Python wrapper files copy into place based on bundled
	versions for each active HepMC interface (2.3, 2.4 & 2.5), using a
	new HepMC version detector test in configure.

	* Adding YAML metadata files and parser, removing same metadata
	from the analysis classes' source headers.
